[tool.poetry]
name = "topic_moderator"
version = "0.1.0"
description = "кто посмотрел у того мамы нету"
authors = ["Zalupa Bobra <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
fastapi = "^0.110.0"
transformers = "^4.39.1"
torch = "^2.2.2"
tqdm = "^4.66.2"
pandas = "^1.5.3"
uvicorn = "^0.29.0"
scikit-learn = "^1.4.2"
openpyxl = "^3.1.2"
tensorboard = "^2.16.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
